Quelque arrangement de fait

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="textehome">
       <h1>
         Bonjour, je m'appelle Steven et je souhaite devenir<br>
-         <b>Développeur web</b>
+         <b>Développeur web et web mobile</b>
       </h1>
       <h2>
-        Je suis à la recherche d'une école à Toulouse et
+        Je suis actuellement à la recherche d'une école à Toulouse et
         ses alentours.
       </h2>
       <!-- <table> -->
@@ -135,7 +135,7 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         </p>
         <br />
       </div>
-      <div class="work" id="three">
+      <div class="work2" id="three">
         <h5>Année 2019</h5>
         <h4>Technicien en informatique (2 mois)</h4>
         <p><i>GroupESI</i>, Aucamville.</p>
@@ -146,7 +146,7 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         </p>
         <br />
       </div>
-      <div class="work" id="four">
+      <div class="work3" id="four">
         <h5>Année 2018</h5>
         <h4>Stage en tant que Technicien télécoms et réseaux (2 mois)</h4>
         <p><i>ETE RESEAUX</i>, Portet-sur-Garonne.</p>
