- Arrangement de la navigation au propre physiquement sur le site et en ecriture CSS. - Suppression de icone de maison dans la nav pour le raccourice à l'accueil. Raison : Impossible de mettre une image dans la balise link sans quel ressorte dans le top.

--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
     
   </head>
   <body>
-    <section class="home" id="home">
+    <section id="home">
       <div class="blockhome">
      <nav>
       <ul class="hometab">
-        <li><a href="#home" id="linkiconemaison"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="maison"><path d="M20,8h0L14,2.74a3,3,0,0,0-4,0L4,8a3,3,0,0,0-1,2.26V19a3,3,0,0,0,3,3H18a3,3,0,0,0,3-3V10.25A3,3,0,0,0,20,8ZM14,20H10V15a1,1,0,0,1,1-1h2a1,1,0,0,1,1,1Zm5-1a1,1,0,0,1-1,1H16V15a3,3,0,0,0-3-3H11a3,3,0,0,0-3,3v5H6a1,1,0,0,1-1-1V10.25a1,1,0,0,1,.34-.75l6-5.25a1,1,0,0,1,1.32,0l6,5.25a1,1,0,0,1,.34.75Z"/></svg></a></li>
-        <li><a href="#about">Qui suis-je ?</a></li>
+        <!-- <img src="./assets/home.png" alt="Icone de maison" class="iconehome"> -->
+        
+        <li><a href="#home">Accueil</a></li>
+        <li><a href="#about">À propos de moi</a></li>
         <li><a href="#experience">Expérience</a></li>
         <li><a href="#formation">Formation</a></li>
         <li><a href="#project">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+     </nav>
     <div class="thefirst">
       <div class="outer-container">
         <div class="textehome">
@@ -77,16 +79,14 @@
   que je souhaite accéder à votre établissement qui ma était proposé par la Mission Local.
   Issu du milieu informatique et intéressé dans le domaine depuis tous jeune, j’ai été attiré par la filière
   du développement et de la conception informatique lors de mon cursus scolaire au lycée.
-  J’ai appris par le temps et
-  par mes expériences professionnelles la force du métier, ses multiples
+  J’ai appris par le temps et par mes expériences professionnelles la force du métier, ses multiples
   avantages ainsi que son énorme utilité dans le marché et je serais faire face au contrainte du métier
   qui mon était partagé par plusieurs professionnelle.</p>
 
-<p>
-        En 2019 j'obtiens mon BAC SN (Système Numérique) et je m'inscris dans un BTS SN en alternance mais par malchance je me retrouve sans école quelques jours avant la rentrée scolaire car le rectorat prend la décision de fermer ma filière malgré mon recrutement validé dans une entreprise.
+<p>En 2019 j'obtiens mon BAC SN (Système Numérique) et je m'inscris dans un BTS SN en alternance mais par malchance je me retrouve sans école quelques jours avant la rentrée scolaire car le rectorat prend la décision de fermer ma filière malgré mon recrutement validé dans une entreprise.
 Force de conviction je poursuis l'année par plusieurs petits travails et je profite de ce temps pour réfléchir à un métier qui correspond réellement à ma passion, Developpeur WEB.
 J’ai pris la décision en début 2022 de m'inscrire à la Mission Local afin de pouvoir valider mon projet professionnelle et d'avoir un soutien afin de prouver ma réel motivation.
-Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enquête métier et stages. J’ai  par ailleurs suivi la formation "Apple Foundation Program" que vous proposez.
+Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enquête métier et stages. J’ai par ailleurs suivi la formation "Apple Foundation Program" que vous proposez.
 <br> Votre école est mon objectif, je donnerai le meilleur de moi-même afin d’intégrée votre formation et d’apprendre mon métier qui me tiens à cœur. <br>
 
       </p>
@@ -99,7 +99,7 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
       <div class="outer-container">
       <h2>Expériences professionnelles</h2>
       <br />
-      <div class="work" id="one">
+      <div class="work" id="one" >
         <h5>Année 2022</h5>
         <h4>Développeur Web - Stagiaire</h4>
         <p><i>CoperBee</i>,Lapeyrouse-Fossat.</p>
@@ -116,7 +116,10 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         <br />
       </div>
 
-      <div class="work" id="two">
+<hr>
+
+
+      <div class="work2" id="two">
         <h5>Année 2020 - 21</h5>
         <h4>Préparateur de commande et Employé Recondionnement (10 mois)</h4>
         <p><i>IKEA</i> - Leclerc Drive, Roques-sur-Garonne.</p>
@@ -126,7 +129,7 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         </p>
         <br />
       </div>
-      <div class="work2" id="three">
+      <div class="work3" id="three">
         <h5>Année 2019</h5>
         <h4>Technicien en informatique (2 mois)</h4>
         <p><i>GroupESI</i>, Aucamville.</p>
@@ -137,7 +140,7 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         </p>
         <br />
       </div>
-      <div class="work3" id="four">
+      <div class="work4" id="four">
         <h5>Année 2018</h5>
         <h4>Stage en tant que Technicien télécoms et réseaux (2 mois)</h4>
         <p><i>ETE RESEAUX</i>, Portet-sur-Garonne.</p>
