- Changement de l'icone en onglet de page. - Rajout, complet et terminé, de la ligne présentoir noir à gauche de l'outer-container. - Quelques ajouts/modification.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/responsive.png"
+      href="./assets/web.png"
     />
     <link rel="stylesheet" href="./style.css" />
   
@@ -64,6 +64,12 @@
   </section>
     <br />
     <section id="about">
+      <div class="outer-container2">
+        <img src="./assets/user.png">
+<hr id="liner">
+
+
+      </div>
       <div class="outer-container">
         <div class="box">
         <div class="firstbox">
@@ -96,6 +102,12 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
     </section>
   </div>
     <section id="experience">
+      <div class="outer-container2">
+        <img src="./assets/briefcase.png">
+<hr id="liner">
+
+
+      </div>
       <div class="outer-container">
       <h2>Expériences professionnelles</h2>
       <br />
@@ -115,9 +127,6 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
         </p>
         <br />
       </div>
-
-<hr>
-
 
       <div class="work2" id="two">
         <h5>Année 2020 - 21</h5>
@@ -154,6 +163,12 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
     </section>
  
     <section id="formation">
+      <div class="outer-container2">
+        <img src="./assets/diplome.png">
+<hr id="liner">
+
+
+      </div>
       <div class="outer-container">
       <h2>Formation</h2>
       <div class="school" id="first">
@@ -174,6 +189,12 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
     </div>
     </section>
     <section id="project">
+      <div class="outer-container2">
+        <img src="./assets/pen.png">
+<hr id="liner">
+
+
+      </div>
       <div class="outer-container">
       <h2>Portfolio</h2>
       <div class="result" id=""></div>
@@ -181,7 +202,8 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
       <p>SwiftUI</p>
       <p>Les réalisation ..</p>
       
-      <p>***************</p>
+      <p>**************************************************************************************
+        *************************************************</p>
       <p>***************</p>
       <p>***************</p>
       <p>***************</p>
@@ -189,12 +211,16 @@ Aujourd'hui, mon projet est validé par la Mission Local suite à plusieurs enqu
     </div>
     </section>
     <section id="contact">
+      <div class="outer-container2">
+        <img src="./assets/contact.png">
+<hr id="liner">
+
+
+      </div>
       <div class="outer-container">
       <h2>Contactez-moi !</h2>
       <p>
-        Je suis actuellement a la recherche d'une entreprise pour les postes de:
-      </p>
-      <p>Développeur d'application android - Développeur front-end</p>
+        Je suis actuellement a la recherche d'une entreprise pour les postes de: Développeur d'application android - Développeur front-end</p>
       <br />
 
       <p>Localisation :</p>
